--- a/ew_css/textstyles.css
+++ b/ew_css/textstyles.css
@@ -1,7 +1,7 @@
-.para1{font-size: 0; text-align:left; padding-bottom:11px; margin-top:0px; padding-top:0px;}
-.linkStyle_2{color:#000000; text-decoration:none; /* 0 1 #00F900 #919191 #5D5D5D */}
-.linkStyle_2:visited{color:#919191; text-decoration:underline;}
-.linkStyle_2:hover{color:#5D5D5D; text-decoration:none;}
+.para1{font-size: 0; text-align:center; padding-bottom:117px; margin-top:0px; padding-top:0px;}
+.linkStyle_2{color:#000000; text-decoration:none; /* 1 1 #00F900 #D4D4D4 #919191 */}
+.linkStyle_2:visited{color:#D4D4D4; text-decoration:none;}
+.linkStyle_2:hover{color:#919191; text-decoration:none;}
 a.outerlink{text-decoration:none}
 .animhidden{opacity: 0}
 .animvisible{opacity: 1}
