--- a/ew_css/globaltextstyles.css
+++ b/ew_css/globaltextstyles.css
@@ -1,7 +1,7 @@
 .ewgsStyle1{
-font-family: 'ArialMT','Arial',sans-serif;
-font-size: 12px; 
-font-weight:normal; 
+font-family: 'HelveticaNeue-Light','Helvetica Neue','Arial',sans-serif;
+font-size: 17px; 
+font-weight:300; 
 text-decoration: none;
 color: #000000;
 background-color: transparent;
