--- a/ew_css/textstyles.css
+++ b/ew_css/textstyles.css
@@ -68,3 +68,9 @@
 a.outerlink{text-decoration:none}
 .animhidden{opacity: 0}
 .animvisible{opacity: 1}
+.Style22{font-family:  'AppleSystemUIFont', 'Helvetica Neue' ,'Arial' ,sans-serif ;
+ font-size: 17px; 
+ font-weight:normal; 
+ margin:0;
+ color: #FEFEFE;
+ word-wrap: break-word;}
